<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_square"
        android:icon="@drawable/ic_bottom_square"
        android:title="@string/title_square"/>

    <item
        android:id="@+id/navigation_rank"
        android:icon="@drawable/ic_bottom_rank"
        android:title="@string/title_rank"/>

    <item
        android:id="@+id/navigation_team"
        android:icon="@drawable/ic_bottom_team"
        android:title="@string/title_team"/>


    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_bottom_discover"
        android:title="@string/title_discover"/>

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_bottom_my"
        android:title="@string/title_my"/>

</menu>
